opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/lru_cache"
bug-reports: "https://github.com/janestreet/lru_cache/issues"
dev-repo: "git+https://github.com/janestreet/lru_cache.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/lru_cache/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.10.0"}
  "core"
  "ppx_jane"
  "dune"     {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "An LRU Cache implementation."
description: "
Implementation of a Least Recently Used Cache.
"
